[gd_scene load_steps=9 format=3 uid="uid://bcc5cfv0o0imi"]

[ext_resource type="Theme" uid="uid://b02a2u15epnu7" path="res://ui/ui_theme.tres" id="1_4a4vq"]
[ext_resource type="Script" path="res://scripts/start_screen.gd" id="1_kumlx"]
[ext_resource type="Texture2D" uid="uid://bba1qhj85b534" path="res://art/Landscape - Level Assets/Background/Level 1/Forest_Background.png" id="2_70swg"]
[ext_resource type="Texture2D" uid="uid://c38kyb5w1evp6" path="res://art/Title and Pause Screens/ECHO.png" id="3_k0epl"]

[sub_resource type="InputEventAction" id="InputEventAction_ot0gh"]
action = &"confirm"

[sub_resource type="Shortcut" id="Shortcut_1en2q"]
events = [SubResource("InputEventAction_ot0gh")]

[sub_resource type="InputEventAction" id="InputEventAction_bl4b1"]
action = &"pause_game"

[sub_resource type="Shortcut" id="Shortcut_a22dd"]
events = [SubResource("InputEventAction_bl4b1")]

[node name="StartScreen" type="CanvasLayer"]
script = ExtResource("1_kumlx")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.482353, 0.635294, 0.364706, 1)

[node name="BackgroundImage" type="Sprite2D" parent="."]
position = Vector2(608, 363)
scale = Vector2(0.276667, 0.271852)
texture = ExtResource("2_70swg")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_4a4vq")

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
shortcut = SubResource("Shortcut_1en2q")
shortcut_in_tooltip = false
text = "START"

[node name="LevelSelectButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "LEVEL SELECT"

[node name="CreditsButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "CREDITS"

[node name="ExitButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
shortcut = SubResource("Shortcut_a22dd")
shortcut_in_tooltip = false
text = "EXIT"

[node name="Title" type="Label" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -108.0
offset_top = 133.0
offset_right = 102.0
offset_bottom = 156.0
grow_horizontal = 2
theme = ExtResource("1_4a4vq")
text = "ECHO"
horizontal_alignment = 1

[node name="TitleImage" type="Sprite2D" parent="."]
position = Vector2(577, 109)
scale = Vector2(0.452, 0.428)
texture = ExtResource("3_k0epl")

[connection signal="mouse_entered" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/StartButton" to="." method="_on_start_button_mouse_entered"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/LevelSelectButton" to="." method="_on_level_select_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="mouse_entered" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_mouse_entered"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
